--- a/src/scss/_cutekitchen-variables.scss
+++ b/src/scss/_cutekitchen-variables.scss
@@ -10,13 +10,18 @@ $cutekitchen-block-font: 'Bungee', sans-serif;
 $cutekitchen-sans-serif-font: 'Yantramanav', sans-serif;
 $cutekitchen-serif-font: 'Roboto Slab', serif;
 
-$cutekitchen-black: #1c1d23;
-$cutekitchen-dark: #464655;
-$cutekitchen-light: #e4e6c3;
-$cutekitchen-white: #f7f7f2;
-$cutekitchen-primary: #9bc53d;
+$cutekitchen-black: #220901;
+$cutekitchen-dark: #361f18;
+$cutekitchen-light: #dad6d5;
+$cutekitchen-white: #eceaea;
 
-$cutekitchen-secondary: $cuteworks-secondary;
-$cutekitchen-secondary-subtle: $cuteworks-secondary-subtle;
+$cutekitchen-primary: #ffbb1e;
+//$cutekitchen-primary-subtle: #ffbble; //TODO
 
-$cutekitchen-black-deep: darken($cutekitchen-black, 5%);
+$cutekitchen-secondary: #621708;
+//$cutekitchen-secondary-subtle: $cuteworks-secondary-subtle; // TODO;
+
+$cutekitchen-primary-accent: #bc3908;
+$cutekitchen-secondary-accent: #941b0c;
+
+//$cutekitchen-black-deep: darken($cutekitchen-black, 5%);
