splash page looking alright

--- a/src/scss/_cutekitchen-variables.scss
+++ b/src/scss/_cutekitchen-variables.scss
@@ -15,13 +15,13 @@ $cutekitchen-dark: #361f18;
 $cutekitchen-light: #dad6d5;
 $cutekitchen-white: #eceaea;
 
-$cutekitchen-primary: #ffbb1e;
+$cutekitchen-primary: #bc3908;
 //$cutekitchen-primary-subtle: #ffbble; //TODO
 
 $cutekitchen-secondary: #621708;
 //$cutekitchen-secondary-subtle: $cuteworks-secondary-subtle; // TODO;
 
-$cutekitchen-primary-accent: #bc3908;
+$cutekitchen-primary-accent: #ffbb1e;
 $cutekitchen-secondary-accent: #941b0c;
 
 //$cutekitchen-black-deep: darken($cutekitchen-black, 5%);
