--- a/src/scss/bulma.scss
+++ b/src/scss/bulma.scss
@@ -30,6 +30,8 @@ $navbar-item-hover-background-color: $cutekitchen-dark;
 
 $black: $cutekitchen-black;
 
+$link: $cutekitchen-primary-accent;
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // endregion
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
