--- a/templates/splash/splash-header.html
+++ b/templates/splash/splash-header.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<section class="hero is-primary">
+    <div class="hero-body">
+        <div class="container">
+            <div class="columns">
+                <div class="column">
+                    <h1 class="title">CuteKitchen</h1>
+                    <h2 class="subtitle">Social grocery shopping</h2>
+                </div>
+                <div class="column has-text-right">
+                    <p>
+                        <a href="#" class="button is-large is-primary is-block-touch">Sign Up</a>
+                        <a href="#" class="button is-large is-info is-block-touch">Log In</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
