--- a/src/scss/cutekitchen.scss
+++ b/src/scss/cutekitchen.scss
@@ -10,12 +10,23 @@ body, section.section {
 }
 
 
+/* Default text content (other than headers) should use the serif font. */
+.content {
+  font-family: $cutekitchen-serif-font;
+}
+
 /* Color should be white in the footer and titles should be smaller. */
 .footer {
   color: $cutekitchen-light;
+  font-size: 0.9rem;
 
   .title, .subtitle {
     color: $cutekitchen-light; /* Need the color set here too, .title has a color property. */
     font-size: 1.25rem;
+  }
+
+  /* Reset size for the icons in the footer, they don't look right at 0.9rem. */
+  a.icon {
+    font-size: 1rem;
   }
 }
