--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,10 @@
     <!-- / -->
 
     <!-- Icon font and Google fonts -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bin/fontawesome-all.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/lib/fontawesome-all.min.css') }}">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Yantramanav:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
     <!-- / -->
 
     <!-- Template styles -->
@@ -39,7 +39,7 @@
     <!-- / -->
 
     <!-- JS frameworks and custom JS to run on every page -->
-    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/lib/jquery.min.js') }}"></script>
     <!-- / -->
 
     <title>{% block title %}{% endblock %}</title>
