--- a/templates/splash/splash.html
+++ b/templates/splash/splash.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% block title %}CuteKitchen{% endblock %}
 
+{% block head %}
+    {% include "splash/splash-head.html" %}
+{% endblock %}
+
 {% block scripts %}{% endblock %}
 
 {% block styles %}
