add register skeleton

--- a/src/scss/bulma.scss
+++ b/src/scss/bulma.scss
@@ -30,7 +30,7 @@ $navbar-item-hover-background-color: $cutekitchen-dark;
 
 $black: $cutekitchen-black;
 
-$link: $cutekitchen-primary-accent;
+$link: $cutekitchen-primary;
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // endregion
