--- a/templates/authentication/register/register-body.html
+++ b/templates/authentication/register/register-body.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="columns">
             <div class="column is-4 is-offset-4">
-                <h2 class="title"><i class="fas fa-list"></i> Let's get started</h2>
+                <h2 class="title"><i class="fas fa-id-badge"></i> Sign Up</h2>
                 <p class="content">Already have an account? <a href="#">Sign in</a> instead.</p> <!-- TODO: Link -->
 
                 <!-- TODO: Need better wording here: -->
