--- a/templates/splash/splash-header.html
+++ b/templates/splash/splash-header.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class="column has-text-right">
                     <p>
-                        <a href="#" class="button is-large is-primary is-block-touch">Sign Up</a>
+                        <a href="{{ url_for("register") }}" class="button is-large is-primary is-block-touch">Sign Up</a>
                         <a href="#" class="button is-large is-info is-block-touch">Log In</a>
                     </p>
                 </div>
