Styles for registration form

--- a/src/scss/bulma.scss
+++ b/src/scss/bulma.scss
@@ -30,7 +30,7 @@ $navbar-item-hover-background-color: $cutekitchen-dark;
 
 $black: $cutekitchen-black;
 
-$link: $cutekitchen-primary;
+$link: $cutekitchen-primary-accent;
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // endregion
@@ -41,6 +41,12 @@ $link: $cutekitchen-primary;
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // region Framework fixes
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+/* There should be some space between icons used in card headers. */
+
+.card-header-title > i {
+  margin-right: 0.75rem;
+}
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // endregion
