--- a/templates/authentication/register/register-body.html
+++ b/templates/authentication/register/register-body.html
@@ -2,11 +2,40 @@
     <div class="container">
         <div class="columns">
             <div class="column is-4 is-offset-4">
-                <h2 class="title"><i class="fas fa-id-badge"></i> Sign Up</h2>
-                <p class="content">Already have an account? <a href="#">Sign in</a> instead.</p> <!-- TODO: Link -->
 
-                <!-- TODO: Need better wording here: -->
-                <p class="content">Re-use weekly shopping lists and add items from your kitchen that are running low</p>
+                <div class="card">
+                    <header class="card-header">
+                        <h1 class="title card-header-title">
+                            <i class="fas fa-id-badge"></i>
+                            Sign Up
+                        </h1>
+                    </header>
+                    <div class="card-content">
+                        <form action="" method="post">
+                            <div class="field">
+                                <label class="label" for="input-username">Username</label>
+                                <input id="input-username" class="input" type="text" placeholder="e.g. alex" maxlength="20" required/>
+                                <p class="help">Can't be changed later, but you <em>can</em> set a display name</p>
+                            </div>
+
+                            <div class="field">
+                                <label class="label" for="input-password">Password</label>
+                                <input id="input-password" class="input" type="password" maxlength="64" required/>
+                            </div>
+
+                            <div class="field">
+                                <div class="control has-text-right">
+                                    <button type="submit" class="button is-primary">Register</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <footer class="card-footer">
+                        <a href="{{ url_for("splash") }}" class="card-footer-item">Cancel</a>
+                    </footer>
+                </div>
+
+
             </div>
         </div>
     </div>
