--- a/templates/outside/splash/splash.html
+++ b/templates/outside/splash/splash.html
@@ -2,7 +2,7 @@
 {% block title %}CuteKitchen{% endblock %}
 
 {% block head %}
-    {% include "splash/splash-head.html" %}
+    {% include "outside/splash/splash-head.html" %}
 {% endblock %}
 
 {% block scripts %}{% endblock %}
@@ -12,13 +12,13 @@
 {% endblock %}
 
 {% block header %}
-    {% include "splash/splash-header.html" %}
+    {% include "outside/splash/splash-header.html" %}
 {% endblock %}
 
 {% block body %}
-    {% include "splash/splash-body.html" %}
+    {% include "outside/splash/splash-body.html" %}
 {% endblock %}
 
 {% block footer %}
-    {% include "splash/splash-footer.html" %}
+    {% include "outside/splash/splash-footer.html" %}
 {% endblock %}
