--- a/templates/authentication/register/register.html
+++ b/templates/authentication/register/register.html
@@ -7,7 +7,9 @@
 
 {% block styles %}{% endblock %}
 
-{% block header %}{% endblock %}
+{% block header %}
+    {% include "outside/outside-header.html" %}
+{% endblock %}
 
 {% block body %}
     {% include "authentication/register/register-body.html" %}
