Add terms, license, and privacy policy

--- a/templates/authentication/register/register-body.html
+++ b/templates/authentication/register/register-body.html
@@ -40,3 +40,11 @@
         </div>
     </div>
 </section>
+<section class="section">
+    <div class="container">
+        <p class="content has-text-centered">
+            Use of the service constitutes acceptance of the <a href="{{ url_for("terms") }}">Terms and Conditions</a>
+            and the <a href="{{ url_for("privacy") }}">Privacy Policy</a>.
+        </p>
+    </div>
+</section>
