--- a/templates/outside/splash/splash-footer.html
+++ b/templates/outside/splash/splash-footer.html
@@ -4,9 +4,9 @@
             <div class="column">
                 <h3 class="subtitle">About</h3>
                 <ul class="content">
-                    <li>Terms of Service</li>
-                    <li>Privacy Policy</li>
-                    <li>License</li>
+                    <li><a href="{{ url_for("terms") }}">Terms of Service</a></li>
+                    <li><a href="{{ url_for("privacy") }}">Privacy Policy</a></li>
+                    <li><a href="{{ url_for("license") }}">License</a></li>
                 </ul>
             </div>
             <div class="column">
