Update color scheme

--- a/src/scss/_cutekitchen-variables.scss
+++ b/src/scss/_cutekitchen-variables.scss
@@ -10,18 +10,13 @@ $cutekitchen-block-font: 'Bungee', sans-serif;
 $cutekitchen-sans-serif-font: 'Yantramanav', sans-serif;
 $cutekitchen-serif-font: 'Roboto Slab', serif;
 
-$cutekitchen-black: #220901;
-$cutekitchen-dark: #361f18;
-$cutekitchen-light: #dad6d5;
-$cutekitchen-white: #eceaea;
+$cutekitchen-black: #120b0b;
+$cutekitchen-dark: #2d1b1b;
+$cutekitchen-light: #e2dbdb;
+$cutekitchen-white: #f0eded;
 
-$cutekitchen-primary: #bc3908;
-//$cutekitchen-primary-subtle: #ffbble; //TODO
+$cutekitchen-primary: #60993e;
+$cutekitchen-secondary: #77ff94;
 
-$cutekitchen-secondary: #621708;
-//$cutekitchen-secondary-subtle: $cuteworks-secondary-subtle; // TODO;
-
-$cutekitchen-primary-accent: #ffbb1e;
-$cutekitchen-secondary-accent: #941b0c;
-
-//$cutekitchen-black-deep: darken($cutekitchen-black, 5%);
+$cutekitchen-primary-accent: #a1e44d;
+$cutekitchen-secondary-accent: #7afdd6;
