--- a/templates/outside/splash/splash-header.html
+++ b/templates/outside/splash/splash-header.html
@@ -9,7 +9,7 @@
                 <div class="column has-text-right">
                     <p>
                         <a href="{{ url_for("register") }}" class="button is-large is-primary is-block-touch">Sign Up</a>
-                        <a href="#" class="button is-large is-info is-block-touch">Log In</a>
+                        <a href="#" class="button is-large is-block-touch">Log In</a>
                     </p>
                 </div>
             </div>
