--- a/templates/outside/splash/splash.html
+++ b/templates/outside/splash/splash.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
 {% block title %}CuteKitchen{% endblock %}
 
-{% block head %}
-    {% include "outside/splash/splash-head.html" %}
-{% endblock %}
+{% block head %}{% endblock %}
 
 {% block scripts %}{% endblock %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bin/route/splash.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bin/splash.css') }}">
 {% endblock %}
 
 {% block header %}
