add viewmodel logic and fix business logic handling

--- a/src/scss/cutekitchen.scss
+++ b/src/scss/cutekitchen.scss
@@ -21,7 +21,7 @@ a {
 
 
 /* Main title should use a fancy font. */
-.hero .title {
+.hero .title, .navbar .title {
   font-family: "Pacifico", sans-serif;
 }
 
