--- a/templates/kitchen/kitchen-header.html
+++ b/templates/kitchen/kitchen-header.html
@@ -1,4 +1,4 @@
-<section class="hero is-small is-primary">
+<!--<section class="hero is-small is-primary">
     <div class="hero-body">
         <div class="container">
             <div class="columns">
@@ -9,3 +9,30 @@
         </div>
     </div>
 </section>
+=-->
+
+<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <a class="navbar-item" href="{{ url_for("splash") }}">
+            <h2 class="title has-text-light">CuteKitchen</h2>
+        </a>
+
+        <div class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item">
+                    Home
+                </a>
+            </div>
+
+            <div class="navbar-end">
+                <a class="navbar-item">
+                    Profile<br />
+                    {{ vm.username }}
+                </a>
+                <a class="navbar-item" href="{{ url_for("logout") }}">
+                    Log Out
+                </a>
+            </div>
+        </div>
+    </div>
+</nav>
