Enhance error pages

--- a/templates/error/403.html
+++ b/templates/error/403.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>403</title>
-</head>
-<body>
-403
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}CuteKitchen - Forbidden{% endblock %}
+
+{% block head %}{% endblock %}
+
+{% block scripts %}{% endblock %}
+
+{% block styles %}{% endblock %}
+
+{% block header %}
+    {% include "outside/outside-header.html" %}
+{% endblock %}
+
+{% block body %}
+    {% include "error/403-body.html" %}
+{% endblock %}
+
+{% block footer %}
+    {% include "outside/outside-footer.html" %}
+{% endblock %}
