--- a/templates/kitchen/kitchen-header.html
+++ b/templates/kitchen/kitchen-header.html
@@ -21,5 +21,12 @@
                 </a>
             </div>
         </div>
+
+
+         <a role="button" class="navbar-burger has-text-white" aria-label="menu" aria-expanded="false">
+      <span aria-hidden="true">You</span>
+      <span aria-hidden="true">are a </span>
+      <span aria-hidden="true">pirate</span>
+    </a>
     </div>
 </nav>
