rework tempaltes for logged in home view

--- a/src/scss/bulma.scss
+++ b/src/scss/bulma.scss
@@ -2,7 +2,6 @@
  * Pulls in the main Bulma framework styles from the dependencies folder, after applying any of our overrides. Any
  * additional framework fixes are then applied.
  * ********************************************************************************************************************/
-
 @import "cutekitchen-variables";
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -43,9 +42,13 @@ $link: $cutekitchen-primary-accent;
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 /* There should be some space between icons used in card headers. */
-
 .card-header-title > i {
   margin-right: 0.75rem;
+}
+
+/* Remove the hideous underline from the text buttons. */
+.button.is-text {
+  text-decoration: none;
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
