--- a/templates/kitchen/home/home.html
+++ b/templates/kitchen/home/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% block title %}CuteKitchen - Home{% endblock %}
 
 {% block head %}{% endblock %}
@@ -8,7 +9,7 @@
 {% block styles %}{% endblock %}
 
 {% block header %}
-    {% include "kitchen/kitchen-header.html" %}
+    {% include "kitchen/home/home-header.html" %}
 {% endblock %}
 
 {% block body %}
